<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:minWidth="350dp">

    <RadioGroup
        android:id="@+id/rg_lvl"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:gravity="center">
        
        <RadioButton
            android:id="@+id/rb_easy"
            android:layout_width="wrap_content"
        	android:layout_height="55dp"
        	android:text="@string/easy"
            android:paddingEnd="5pt"
            android:paddingLeft="5dp"/>

        <RadioButton
            android:id="@+id/rb_normal"
            android:layout_width="wrap_content"
        	android:layout_height="55dp"
        	android:text="@string/normal"
            android:paddingEnd="5pt"
            android:paddingLeft="5dp"/>

        <RadioButton
            android:id="@+id/rb_hard"
            android:layout_width="wrap_content"
        	android:layout_height="55dp"
        	android:text="@string/hard"
            android:paddingLeft="5dp"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:weightSum="1" >
        
        <Button
            android:id="@+id/btn_create"
            android:layout_width="107dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="0.5"
        	android:text="@string/start"
            />
        
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="108dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="0.5"
        	android:text="@string/cancel" />
        
    </LinearLayout>
</LinearLayout>
